# AI-Learning-Journey

./: README.md
.github/workflows/: ci.yml
cli-tool/: pyproject.toml
code-snippets/decorator-templates/: README.md  logger.py  timer.py
docs/: 01-教学协议.md  02-学员档案.md  03-学习路线总览.md  03-学习路线总览_v2.0.md  04-代码规范与模板.md  04-学习进度追踪.md  05-教学风格记录.md  06-Git工作流程.md  07-学习进度追踪.md  07-常见问题FAQ.md  09-无损迁移协议.md  LEARNING_ROUTE_TEMPLATE.md  LEARNING_ROUTE_V4.md
notes/: Month-1.md  Month-2.md  cheatsheet.md  cheatsheet_M1.md  cheatsheet_M2.md  m1w3-template.md  m1w4-ai-concepts.md
projects/M1w2d1 /: demo.py
projects/M1w2d2/: client.py  demo.py  models.py  service.py
projects/M1w2d3/: __init__.py  main.py
projects/M1w2d4/: demo.py  pyproject.toml
projects/cli-tool/: README.md  pyproject.toml
projects/cli-tool/src/cli_tool/: __init__.py  main.py
projects/cli-tool/tests/: test_count.py  test_find.py
projects/llm-client/: demo.py  pyproject.toml  structured_output.py
projects/llm-client/src/: __init__.py
projects/llm-client/src/llm_client/: __init__.py  client.py  exceptions.py  mock_provider.py  models.py  provider.py  retry.py
projects/llm-client/tests/: test_llm_client.py
projects/python-app-template/: .gitignore  README.md  pyproject.toml
projects/python-app-template/src/: pyrightconfig.json
projects/python-app-template/src/python_app_template/: main.py
projects/python-app-template/src/python_app_template/client/: MockUserClient.py  RealUserClient.py  UserClient.py  __init__.py
projects/python-app-template/src/python_app_template/model/: User.py  __init__.py
projects/python-app-template/src/python_app_template/service/: UserService.py  __init__.py
projects/python-app-template/src/python_app_template/utils/: logger.py
projects/python-app-template/tests/: test_user_service.py
projects/string-utils/: pyproject.toml  pyrightconfig.json
projects/string-utils/.github/workflows/: ci.yml
projects/string-utils/src/string_utils/: __init__.py
projects/string-utils/tests/: test_string_utils.py
(+54 files in other folders)
