[project]
name = "cli-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "guqingge", email = "shixiang0714@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
cli-tool = "cli_tool.main:app"