[project]
name = "llm-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "guqingge", email = "shixiang0714@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
